force-app/main/default/objects/tc9_pr__Payment_File__c/tc9_pr__Payment_File__c.object-meta.xml
<CustomObject>
    <label>Payment File</label>
    <nameField>
        <displayFormat>PF-{0000000000}</displayFormat>
        <label>Payment File ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>