force-app/main/default/objects/tc9_pr__Payment_File__c/fields/tc9_pr__ABA_File_Include_Balancing_Line__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__ABA_File_Include_Balancing_Line__c</fullName>
    <description>Defines if a ABA Payment File will include a balancing line. Your financial institution will specify if a balancing line is required. This value is pulled from the related Payment Details record.</description>
    <inlineHelpText>Defines if a ABA Payment File will include a balancing line. Your financial institution will specify if a balancing line is required. This value is pulled from the related Payment Details record.</inlineHelpText>
    <label>ABA File Include Balancing Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>