force-app/main/default/objects/tc9_pr__Payment_File__c/fields/tc9_pr__Account_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Account_Name__c</fullName>
    <description>The name of the bank account that payments will be made from. This value is pulled from the related Payment Details record.</description>
    <inlineHelpText>The name of the bank account that payments will be made from. This value is pulled from the related Payment Details record.</inlineHelpText>
    <label>Account Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>