force-app/main/default/objects/tc9_pr__Payment_File__c/fields/tc9_pr__Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Approval_Status__c</fullName>
    <description>Current status within a Payment File Approval Process.</description>
    <inlineHelpText>Current status within a Payment File Approval Process.</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Approval_Status</valueSetName>
    </valueSet>
</CustomField>