force-app/main/default/objects/tc9_pr__Payment_File__c/fields/tc9_pr__Bank_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Bank_Abbreviation__c</fullName>
    <description>The Bank Abbreviation that will be included on an ABA Payment File. The value to be defined in this field should be provided by your financial institution. This value is pulled from the related Payment Details record.</description>
    <inlineHelpText>The Bank Abbreviation that will be included on an ABA Payment File. The value to be defined in this field should be provided by your financial institution. This value is pulled from the related Payment Details record.</inlineHelpText>
    <label>Bank Abbreviation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABS</fullName>
            </value>
            <value>
                <fullName>ADC</fullName>
            </value>
            <value>
                <fullName>ADL</fullName>
            </value>
            <value>
                <fullName>ADV</fullName>
            </value>
            <value>
                <fullName>AMP</fullName>
            </value>
            <value>
                <fullName>ANZ</fullName>
            </value>
            <value>
                <fullName>APO</fullName>
            </value>
            <value>
                <fullName>ARA</fullName>
            </value>
            <value>
                <fullName>ASL</fullName>
            </value>
            <value>
                <fullName>AUB</fullName>
            </value>
            <value>
                <fullName>BAE</fullName>
            </value>
            <value>
                <fullName>BAL</fullName>
            </value>
            <value>
                <fullName>BAY</fullName>
            </value>
            <value>
                <fullName>BBL</fullName>
            </value>
            <value>
                <fullName>BCA</fullName>
            </value>
            <value>
                <fullName>BCC</fullName>
            </value>
            <value>
                <fullName>BCY</fullName>
            </value>
            <value>
                <fullName>BML</fullName>
            </value>
            <value>
                <fullName>BNP</fullName>
            </value>
            <value>
                <fullName>BOC</fullName>
            </value>
            <value>
                <fullName>BOM</fullName>
            </value>
            <value>
                <fullName>BOT</fullName>
            </value>
            <value>
                <fullName>BPS</fullName>
            </value>
            <value>
                <fullName>BQL</fullName>
            </value>
            <value>
                <fullName>BSA</fullName>
            </value>
            <value>
                <fullName>BTA</fullName>
            </value>
            <value>
                <fullName>BWA</fullName>
            </value>
            <value>
                <fullName>BYB</fullName>
            </value>
            <value>
                <fullName>CAP</fullName>
            </value>
            <value>
                <fullName>CBA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>