force-app/main/default/objects/tc9_pr__Payment_File__c/fields/tc9_pr__Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Bank_Account_Number__c</fullName>
    <description>The account number of the account that payments will be made from. This value is pulled from the related Payment Details record</description>
    <inlineHelpText>The account number of the account that payments will be made from. This value is pulled from the related Payment Details record</inlineHelpText>
    <label>Bank Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>