force-app/main/default/objects/tc9_pr__Payment_File__c/fields/tc9_pr__Bank_Description__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Bank_Description__c</fullName>
    <description>The description that will be included on the Payment File specifying where the payment is made from. This value is pulled from the related Payment Details record</description>
    <inlineHelpText>The description that will be included on the Payment File specifying where the payment is made from. This value is pulled from the related Payment Details record</inlineHelpText>
    <label>Bank Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>