force-app/main/default/objects/tc9_pr__Payment_File__c/fields/tc9_pr__Number_of_Payments__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Number_of_Payments__c</fullName>
    <description>The total number of payments that are included on the Payment File.</description>
    <inlineHelpText>The total number of payments that are included on the Payment File.</inlineHelpText>
    <label>Number of Payments</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>