force-app/main/default/objects/tc9_pr__Payment_File__c/fields/tc9_pr__Payee_PAYG_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payee_PAYG_Amount__c</fullName>
    <description>The total value of PAYG included in this Payment File.</description>
    <inlineHelpText>The total value of PAYG included in this Payment File.</inlineHelpText>
    <label>Payee PAYG Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>