force-app/main/default/objects/tc9_pr__Payment_File__c/fields/tc9_pr__Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payment_Date__c</fullName>
    <description>The Date the Payment will be made</description>
    <inlineHelpText>The Date the Payment will be made</inlineHelpText>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>