force-app/main/default/objects/tc9_pr__Payment_File__c/fields/tc9_pr__Payment_Entity__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payment_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Payment Entity that the Payment File relates</description>
    <inlineHelpText>The Payment Entity that the Payment File relates</inlineHelpText>
    <label>Payment Entity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Payment_Entity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Files</relationshipLabel>
    <relationshipName>Payment_Files</relationshipName>
    <type>Lookup</type>
</CustomField>