force-app/main/default/objects/tc9_pr__Payment_File__c/fields/tc9_pr__Payment_File_Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payment_File_Batch_ID__c</fullName>
    <description>The automatic Batch ID applied when the Payment File was created.</description>
    <inlineHelpText>The automatic Batch ID applied when the Payment File was created.</inlineHelpText>
    <label>Payment File Batch ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>