force-app/main/default/objects/tc9_pr__Payment_File__c/fields/tc9_pr__Payments_Minus_PAYG__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payments_Minus_PAYG__c</fullName>
    <description>The total amount of payments that are included on the Payment File, minus the PAYG amount.</description>
    <formula>tc9_pr__Total_Amount_of_Payments__c  -  tc9_pr__Payee_PAYG_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payments Minus PAYG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>