force-app/main/default/objects/tc9_pr__Payment_File__c/fields/tc9_pr__Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Status__c</fullName>
    <description>The Status of Payment File. 
Draft - Payment File is generated ready for review
Failed - An error occurred in generating the Payment File
Released - Payment File has been approved for release</description>
    <inlineHelpText>The Status of Payment File
Draft -Payment File is generated ready for review
Failed -An error occurred in generating the Payment File
Released -Payment File has been approved for release 
Export Failed -An error occurred in releasing the Payment File</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Export Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>