force-app/main/default/objects/tc9_pr__Payment_File__c/fields/tc9_pr__Total_Amount_of_Payments__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Total_Amount_of_Payments__c</fullName>
    <description>The total amount of payments that are included on the Payment File.</description>
    <inlineHelpText>The total amount of payments that are included on the Payment File.</inlineHelpText>
    <label>Total Amount of Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>