force-app/main/default/objects/tc9_pr__Payment_File__c/fields/tc9_pr__Total_Number_of_Payments__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Total_Number_of_Payments__c</fullName>
    <description>The count of related Payment File Line record.</description>
    <inlineHelpText>The count of related Payment File Line record.</inlineHelpText>
    <label>Total Number of Payments</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>