force-app/main/default/objects/tc9_pr__Payment_File__c/recordTypes/tc9_pr__Australian_Bank_Transfer.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Australian_Bank_Transfer</fullName>
    <active>true</active>
    <label>Australian Bank Transfer</label>
</RecordType>