force-app/main/default/objects/tc9_pr__Payment_File__c/recordTypes/tc9_pr__Cash_Payment.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Cash_Payment</fullName>
    <active>true</active>
    <label>Cash Payment</label>
</RecordType>