force-app/main/default/objects/tc9_pr__Payment_File__c/recordTypes/tc9_pr__Cheque_Payment.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Cheque_Payment</fullName>
    <active>true</active>
    <label>Cheque Payment</label>
</RecordType>