force-app/main/default/objects/tc9_pr__Payment_File__c/listViews/tc9_pr__All.listView-meta.xml
<ListView>
    <fullName>tc9_pr__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>tc9_pr__Status__c</columns>
    <columns>tc9_pr__Payment_Entity__c</columns>
    <columns>tc9_pr__Payment_Date__c</columns>
    <columns>tc9_pr__Total_Number_of_Payments__c</columns>
    <columns>tc9_pr__Total_Amount_of_Payments__c</columns>
    <columns>tc9_pr__Approval_Status__c</columns>
    <columns>tc9_pr__ABA_File_Include_Balancing_Line__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>